@@ -18,8 +18,7 @@ PKG_CHECK_MODULES(LIBRAPI2, librapi2 >= 0.9.1)
 
 PKG_CHECK_MODULES(GTK, 
                   glib-2.0       \
-                  gtk+-2.0       \
-                  libglade-2.0)
+                  gtk+-2.0 >= 2.14)
 
 dnl Checks for header files.
 
